--- a/index.html
+++ b/index.html
@@ -5,18 +5,323 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Calendar</title>
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://unpkg.com/lucide-react@latest/dist/umd/lucide-react.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#000000">
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="text/babel" src="app.js"></script>
+  <div id="root">Loading...</div>
+
+  <script>
+    // Create a simple calendar without external dependencies first
+
+    let currentDate = new Date();
+    let viewMode = 'month';
+    let events = [
+      {
+        id: 1,
+        title: "Team standup",
+        date: new Date(2025, 8, 10, 9, 0),
+        category: "work",
+        color: "#3b82f6"
+      },
+      {
+        id: 2,
+        title: "Lunch with Sarah",
+        date: new Date(2025, 8, 12, 12, 30),
+        category: "personal",
+        color: "#10b981"
+      }
+    ];
+
+    let showInput = false;
+    let inputText = '';
+
+    const categories = {
+      work: "#3b82f6",
+      personal: "#10b981",
+      health: "#f59e0b",
+      social: "#8b5cf6"
+    };
+
+    function getDaysInMonth(date) {
+      const year = date.getFullYear();
+      const month = date.getMonth();
+      const firstDay = new Date(year, month, 1);
+      const lastDay = new Date(year, month + 1, 0);
+      const daysInMonth = lastDay.getDate();
+      const startingDayOfWeek = firstDay.getDay();
+
+      const days = [];
+
+      for (let i = 0; i < startingDayOfWeek; i++) {
+        days.push(null);
+      }
+
+      for (let day = 1; day <= daysInMonth; day++) {
+        days.push(day);
+      }
+
+      return days;
+    }
+
+    function getEventsForDay(day) {
+      if (!day) return [];
+      const targetDate = new Date(currentDate.getFullYear(), currentDate.getMonth(), day);
+      return events.filter(event =>
+        event.date.toDateString() === targetDate.toDateString()
+      );
+    }
+
+    function formatMonth(date) {
+      const monthNames = ['JAN', 'FEB', 'MAR', 'APR', 'MAY', 'JUN',
+        'JUL', 'AUG', 'SEP', 'OCT', 'NOV', 'DEC'];
+      return `${monthNames[date.getMonth()]} ${date.getFullYear()}`;
+    }
+
+    function navigate(direction) {
+      const newDate = new Date(currentDate);
+      newDate.setMonth(currentDate.getMonth() + direction);
+      currentDate = newDate;
+      render();
+    }
+
+    function parseNaturalLanguage(text) {
+      const now = new Date();
+      let eventDate = new Date(now);
+      let eventTime = null;
+      let title = text;
+      let category = "personal";
+
+      const timeRegex = /(\d{1,2}):?(\d{0,2})\s*(am|pm|AM|PM)?/;
+      const timeMatch = text.match(timeRegex);
+      if (timeMatch) {
+        let hours = parseInt(timeMatch[1]);
+        let minutes = timeMatch[2] ? parseInt(timeMatch[2]) : 0;
+        const ampm = timeMatch[3]?.toLowerCase();
+
+        if (ampm === 'pm' && hours !== 12) hours += 12;
+        if (ampm === 'am' && hours === 12) hours = 0;
+
+        eventTime = { hours, minutes };
+      }
+
+      const today = new Date(now);
+      if (text.includes('tomorrow')) {
+        eventDate.setDate(today.getDate() + 1);
+      } else if (text.includes('next monday')) {
+        const daysUntilMonday = (8 - today.getDay()) % 7 || 7;
+        eventDate.setDate(today.getDate() + daysUntilMonday);
+      }
+
+      if (eventTime) {
+        eventDate.setHours(eventTime.hours, eventTime.minutes, 0, 0);
+      }
+
+      if (text.includes('meeting') || text.includes('work') || text.includes('boss')) {
+        category = 'work';
+      } else if (text.includes('doctor') || text.includes('gym')) {
+        category = 'health';
+      } else if (text.includes('party') || text.includes('friends')) {
+        category = 'social';
+      }
+
+      title = text
+        .replace(/at \d{1,2}:?\d{0,2}\s*(am|pm)?/i, '')
+        .replace(/next (monday|tuesday|wednesday|thursday|friday|saturday|sunday)/i, '')
+        .replace(/tomorrow/i, '')
+        .trim();
+
+      return {
+        title: title || 'New Event',
+        date: eventDate,
+        category,
+        color: categories[category]
+      };
+    }
+
+    function addEvent() {
+      if (inputText.trim()) {
+        const parsedEvent = parseNaturalLanguage(inputText);
+        const newEvent = {
+          id: Date.now(),
+          ...parsedEvent
+        };
+        events.push(newEvent);
+        inputText = '';
+        showInput = false;
+        render();
+      }
+    }
+
+    function render() {
+      const days = getDaysInMonth(currentDate);
+      const weekDays = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
+
+      let calendarGrid = '';
+      days.forEach((day, index) => {
+        const dayEvents = getEventsForDay(day);
+        const isToday = day &&
+          new Date().toDateString() ===
+          new Date(currentDate.getFullYear(), currentDate.getMonth(), day).toDateString();
+
+        let eventHtml = '';
+        dayEvents.forEach(event => {
+          const time = event.date.toLocaleTimeString('en-US', {
+            hour: 'numeric',
+            minute: '2-digit',
+            hour12: true
+          });
+          eventHtml += `
+            <div class="text-xs p-2 rounded-lg text-white font-bold truncate cursor-pointer hover:opacity-80 transition-opacity border border-gray-400 mb-1"
+                 style="background-color: ${event.color}">
+              ${time} ${event.title}
+            </div>
+          `;
+        });
+
+        calendarGrid += `
+          <div class="border-b border-r border-gray-300 min-h-[100px] p-3 hover:opacity-70 transition-opacity">
+            ${day ? `
+              <div class="text-lg font-black mb-2 ${isToday ? 'w-8 h-8 rounded-full flex items-center justify-center bg-black text-white' : 'text-black'}">
+                ${day}
+              </div>
+              <div class="space-y-1">
+                ${eventHtml}
+              </div>
+            ` : ''}
+          </div>
+        `;
+      });
+
+      document.getElementById('root').innerHTML = `
+        <div class="max-w-md mx-auto min-h-screen bg-white text-black">
+          <!-- Header -->
+          <div class="px-6 py-6 border-b border-gray-300 bg-gray-50">
+            <div class="flex items-center justify-between">
+              <div class="flex items-center space-x-3">
+                <div class="w-7 h-7 bg-blue-500 rounded flex items-center justify-center">
+                  <div class="w-4 h-4 bg-white rounded"></div>
+                </div>
+                <h1 class="text-2xl font-black tracking-wide text-black">CALENDAR</h1>
+              </div>
+              <div class="w-6 h-6 bg-gray-400 rounded cursor-pointer"></div>
+            </div>
+          </div>
+
+          <!-- Navigation -->
+          <div class="flex items-center justify-between px-6 py-6 border-b border-gray-300 bg-black text-white">
+            <button onclick="navigate(-1)" class="p-3 hover:opacity-70 rounded-full transition-opacity">
+              <div class="w-0 h-0 border-t-4 border-b-4 border-r-8 border-t-transparent border-b-transparent border-r-white"></div>
+            </button>
+            <h2 class="text-3xl font-black uppercase tracking-wider">
+              ${formatMonth(currentDate)}
+            </h2>
+            <button onclick="navigate(1)" class="p-3 hover:opacity-70 rounded-full transition-opacity">
+              <div class="w-0 h-0 border-t-4 border-b-4 border-l-8 border-t-transparent border-b-transparent border-l-white"></div>
+            </button>
+          </div>
+
+          <!-- View Mode Selector -->
+          <div class="flex mx-6 my-6 rounded-2xl p-2 border border-gray-300 bg-white">
+            <button class="flex-1 py-4 px-6 text-lg font-black rounded-xl transition-all uppercase tracking-wider ${viewMode === 'month' ? 'bg-black text-white' : 'text-black'}"
+                    onclick="viewMode='month'; render()">
+              month
+            </button>
+            <button class="flex-1 py-4 px-6 text-lg font-black rounded-xl transition-all uppercase tracking-wider ${viewMode === 'week' ? 'bg-black text-white' : 'text-black'}"
+                    onclick="viewMode='week'; render()">
+              week
+            </button>
+            <button class="flex-1 py-4 px-6 text-lg font-black rounded-xl transition-all uppercase tracking-wider ${viewMode === 'day' ? 'bg-black text-white' : 'text-black'}"
+                    onclick="viewMode='day'; render()">
+              day
+            </button>
+          </div>
+
+          <!-- Calendar Grid -->
+          <div class="overflow-auto bg-white">
+            <!-- Week Days Header -->
+            <div class="grid grid-cols-7 border-b border-gray-300 bg-gray-50">
+              ${weekDays.map(day => `
+                <div class="p-4 text-center text-sm font-bold uppercase tracking-widest text-black">
+                  ${day}
+                </div>
+              `).join('')}
+            </div>
+
+            <!-- Calendar Days -->
+            <div class="grid grid-cols-7 bg-white">
+              ${calendarGrid}
+            </div>
+          </div>
+
+          <!-- Add Button -->
+          <button onclick="showInput=true; render()" 
+                  class="fixed bottom-6 right-6 w-16 h-16 bg-black text-white rounded-full shadow-lg flex items-center justify-center transition-all transform hover:scale-105">
+            <div class="text-3xl font-bold">+</div>
+          </button>
+
+          <!-- Add Event Modal -->
+          ${showInput ? `
+            <div class="fixed inset-0 bg-black bg-opacity-50 flex items-end z-50">
+              <div class="bg-white w-full rounded-t-2xl p-6 space-y-4 border-t border-gray-300">
+                <div class="flex items-center justify-between">
+                  <h3 class="text-xl font-black text-black uppercase tracking-wider">Add Event</h3>
+                  <button onclick="showInput=false; render()" class="text-gray-500 hover:text-black text-2xl font-bold">
+                    ×
+                  </button>
+                </div>
+                <div class="space-y-3">
+                  <p class="text-sm text-gray-600 font-bold">
+                    Try: "Meeting at 5pm next monday with boss" or "Gym tomorrow at 7am"
+                  </p>
+                  <div class="flex space-x-2">
+                    <input type="text" id="eventInput" 
+                           value="${inputText}"
+                           onchange="inputText=this.value"
+                           onkeyup="if(event.key==='Enter') addEvent()"
+                           placeholder="Describe your event..."
+                           class="flex-1 px-4 py-4 border-2 border-gray-400 rounded-xl focus:outline-none focus:ring-2 focus:ring-black focus:border-black bg-white text-black font-bold placeholder-gray-500">
+                  </div>
+                  <button onclick="addEvent()" 
+                          class="w-full bg-black hover:bg-gray-800 text-white py-4 rounded-xl font-black uppercase tracking-wide transition-colors">
+                    Add Event
+                  </button>
+                </div>
+              </div>
+            </div>
+          ` : ''}
+
+          <!-- Category Legend -->
+          <div class="px-6 py-4 border-t border-gray-300 bg-gradient-to-r from-gray-50 to-gray-100">
+            <div class="flex flex-wrap gap-4">
+              ${Object.entries(categories).map(([category, color]) => `
+                <div class="flex items-center space-x-2">
+                  <div class="w-4 h-4 rounded-full border border-gray-300 shadow-sm" style="background: linear-gradient(135deg, ${color} 0%, ${color}dd 100%);"></div>
+                  <span class="text-sm font-bold uppercase tracking-wide text-gray-700">${category}</span>
+                </div>
+              `).join('')}
+            </div>
+          </div>
+        </div>
+      `;
+
+      // Focus input if modal is open
+      if (showInput) {
+        setTimeout(() => {
+          const input = document.getElementById('eventInput');
+          if (input) input.focus();
+        }, 100);
+      }
+    }
+
+    // Make functions global for onclick handlers
+    window.navigate = navigate;
+    window.addEvent = addEvent;
+    window.render = render;
+
+    // Initial render
+    render();
+  </script>
 </body>
 
 </html>
